--- a/new.html
+++ b/new.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>untoldcoding</title>
+    <title>Us</title>
     <link rel="stylesheet" href="new.css" />
   </head>
   <body>
     <div class="wrap">
-      <h1>For You 💖</h1>
+      <h1>For You My Tuktukiii💖</h1>
       <div class="postcard1"></div>
       <div class="postcard">
         <div class="letter"></div>
@@ -27,15 +27,10 @@
           <span class="ullu">
             Forever Yours,
             <br />
-            Ullu</span
+            Chanu</span
           >
         </p>
-        <div class="address">
-          <img
-            src="https://i.postimg.cc/9Xq7XyF2/Untold-Coding.png"
-            class="mail_stamp"
-          />
-        </div>
+
       </div>
     </div>
 
