--- a/new.html
+++ b/new.html
@@ -30,12 +30,18 @@
             Chanu</span
           >
         </p>
+        <div class="address">
+          <img
+            src="Us.png"
+            class="mail_stamp"
+          />
+        </div>
 
       </div>
     </div>
 
     <footer>
-      <p>crafted by @untoldcoding.</p>
+      <p>crafted by @sayan+usree.</p>
     </footer>
   </body>
 </html>
