--- a/new.html
+++ b/new.html
@@ -32,7 +32,7 @@
         </p>
         <div class="address">
           <img
-            src="Us.png"
+            src="Us.jpg"
             class="mail_stamp"
           />
         </div>
