--- a/new.html
+++ b/new.html
@@ -13,16 +13,14 @@
       <div class="postcard">
         <div class="letter"></div>
         <p>
-          <span>My Love,</span>
+          <span>My Chonu,</span>
           <br />
-          On this Rose Day, each petal symbolizes my admiration <br />for you.
-          Your presence colors my world with joy and warmth.Like a rose in full
-          bloom, your beauty captivates my heart. The red roses reflect the
-          passion that burns for you, while the white ones signify the purity of
-          our love. In the garden of life, you're my most cherished blossom.
-          Thank you for being my source of love and inspiration. Our journey
-          together is as sweet as the fragrance of roses. Happy Rose Day, my
-          love. Here's to many more petals of shared laughter and enduring love.
+          First of all sorry for late wish 🙃 <br />তোর হাসির আলো আমার জীবনের সবচেয়ে সুন্দর উপহার।
+          লাল গোলাপ যেমন ভালোবাসার প্রতীক, তেমনই তুই আমার হৃদয়ের সমস্ত ভালোবাসার উৎস।
+          প্রতিটা দিন তোর সঙ্গে কাটানো যেন এক একটা ফুলের মতো সুন্দর ও মধুর হয়ে ওঠে।
+          এই গোলাপের মতোই আমাদের ভালোবাসা চিরসবুজ থাকুক, তার সৌন্দর্য আর সুবাস যেন কখনো মলিন না হয়।
+          শুভ রোজ ডে, আমার ছোনু!
+          Dekh ei lekha ta amar nijer noi, internet theke jhaplam kintu feelings gulo akanto nijer 😘
           <br />
           <span class="ullu">
             Forever Yours,
